--- a/index.html
+++ b/index.html
@@ -6,66 +6,62 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" href="./perfil.jpg">   
 </head>
 <body class="container">
-    <div class="col3 col5_md col16_sm" id="LeftRow">
-        <div class="PersonalInfo">
-            <div id="ProfileImage">
-                <img id="DongarraImage" src="./img/perfil.jpg" />
-            </div>
-            <div id="DongarraInfo">
-                <h3>Contact Information</h3>
-                <ul>
-                    <li>Electrical Engineering and Computer Science Department
-                        1122 Volunteer Blvd
-                        University of Tennessee
-                        Knoxville, TN 37996-3450</li>
-                    <li>dongarra@icl.utk.edu</li>
-                </ul>
-            </div>
-            <div id="Profile">
-                <h3>Biographical Sketch</h3>
-                <p>
-                    Jack Joseph Dongarra is the American University Distinguished Professor of Computer Science in the Electrical Engineering and Computer Science 
-                    Department at the University of Tennessee. He holds the position of a Distinguished Research Staff member in the Computer Science and Mathematics 
-                    Division at Oak Ridge National Laboratory, Turing Fellowship in the School of Mathematics at the University of Manchester.
-                </p>
-            </div>
+    <div class="col3 col5_md col16_sm" id="leftRow">
+        <div id="profileImage">
+            <img id="dongarraImage" src="./perfil.jpg" />
+        </div>
+        <div id="contactInfo">
+            <h3>Contact Information</h3>
+            <ul>
+                <li>Electrical Engineering and Computer Science Department 1122 Volunteer Blvd University of Tennessee Knoxville, TN 37996-3450</li>
+                <li>dongarra@icl.utk.edu</li>
+            </ul>
+        </div>
+        <div id="profileInfo">
+            <h3>About Me</h3>
+            <p>Jack Joseph Dongarra is the American University Distinguished Professor of Computer Science in the Electrical Engineering and Computer Science Department at the University of Tennessee. He holds the position of a Distinguished Research Staff member in the Computer Science and Mathematics Division at Oak Ridge National Laboratory, Turing Fellowship in the School of Mathematics at the University of Manchester.</p>
+            <h4> See more:</h4>
+            <a href="https://en.wikipedia.org/wiki/Jack_Dongarra" target="_blank">
+                <i class="fa fa-wikipedia-w" style="font-size:24px"></i>
+            </a>
         </div>
     </div>
-    <div class="col13 col10_md col16_sm" id="BodyBox">
-
-        <div class="col16 col16_md col16_sm" id="Experience">
+    <div class="col13 col10_md col16_sm" id="bodyBox">
+        <div class="col16 col16_md col16_sm" id="experience">
             <h1>Experience</h1>
-            <h3><a href="http://www.netlib.org/blas/index.html" target="_blank"> BLAS (Basic Linear Algebra Subprograms)</a></h3>
+            <h3><a href="http://www.netlib.org/blas/index.html" target="_blank"> BLAS (Basic Linear Algebra Subprograms)</a> 1991 - 2004</h3>
             <p>The BLAS (Basic Linear Algebra Subprograms) are routines that provide standard building blocks for performing basic vector and matrix operations.</p>
-            <h3><a href="http://www.netlib.org/hence/index.html" target="_blank"> HeNCE (Heterogeneous Network Computing Environment)</a></h3>
-            <p>HeNCE (Heterogeneous Network Computing Environment) is an X-window based software environment designed to assist scientists in developing parallel 
-                programs that run on a network of computers. HeNCE provides the programmer with a high level abstraction for specifying parallelism. HeNCE is based on 
-                a parallel programming paradigm where an application program can be described by a graph. 
-            </p>
-            <h3><a href="http://www.netlib.org/mpi/pvmpi/pvmpi.html" target="_blank"> PVMPI</a></h3>
-            <p>
-                A software system that allows independent MPI applications to inter-communicate even if they are running under different MPI implementations using
-                 different language bindings.
-            </p>
+            <h3><a href="http://www.netlib.org/hence/index.html" target="_blank"> HeNCE (Heterogeneous Network Computing Environment)</a> 1983 - 1993</h3>
+            <p>HeNCE (Heterogeneous Network Computing Environment) is an X-window based software environment designed to assist scientists in developing parallel programs that run on a network of computers. HeNCE provides the programmer with a high level abstraction for specifying parallelism. HeNCE is based on a parallel programming paradigm where an application program can be described by a graph. </p>
+            <h3><a href="http://www.netlib.org/mpi/pvmpi/pvmpi.html" target="_blank"> PVMPI</a> 1984 - 1997</h3>
+            <p>A software system that allows independent MPI applications to inter-communicate even if they are running under different MPI implementations using different language bindings.</p>
+            <h3>Others:</h3>
+            <a href="http://www.netlib.org/utk/people/JackDongarra/projects.html" target="_blank">
+                <i class="fa fa-link" style="font-size:24px"></i>
+            </a>
         </div>
-        <div class="col8 col16_md col16_sm" id="Education">
+        <div class="col8 col16_md col16_sm" id="education">
             <h3>Alma Mater</h3>
-            <p>Chicago State University (BSc) - 1972</p>
-            <p>Illinois Institute of Technology (MSc) - 1973</p>
-            <p>University of New Mexico (PhD) - 1980</p>
+            <p class="course">Chicago State University (BSc) - 1972</p>
+            <p>Bachelor of Science degree in Mathematics</p>
+            <p class="course">Illinois Institute of Technology (MSc) - 1973</p>
+            <p>Master of Science in Computer Science</p>
+            <p class="course">University of New Mexico (PhD) - 1980</p>
+            <p>Doctor of Philosophy in Applied Mathematics</p>
         </div>
-        <div class="col8 col16_md col16_sm" id="TechnicalKnowledge">
-            <h3>Technical Knowledge</h3>
-            <p class="card">Parallel Computing</p>
-            <p class="card">Numerical Algorithms in Linear Algebra</p>
-            <p class="card">Use of Advanced-Computer Architectures</p>
-            <p class="card">Programming Methodology</p>
+        <div class="col8 col16_md col16_sm" id="awards">
+            <h3>Awards</h3>
+            <p class="card">Turing Award (2021)</p>
+            <p class="card">Computer Pioneer Award (2020)</p>
+            <p class="card">Foreign Member of the Royal Society (2019)</p>
+            <p class="card">SIAM Fellow (2009)</p>
         </div>
     </div>
-    <div class="col13 col16_md col16_sm" id="FooterBox">
-        <div class="col16 col16_md col16_sm" id="Footer">
+    <div class="col13 col16_md col16_sm" id="footerBox">
+        <div class="col16 col16_md col16_sm" id="footer">
             <p>Social Medias</p>
             <a href="https://twitter.com/jdongarra" target="_blank"> 
                 <i class="fa fa-twitter" style="font-size:24px"></i>
@@ -73,9 +69,8 @@
             <a href="https://www.linkedin.com/in/jack-dongarra-028544" target="_blank">
                 <i class="fa fa-linkedin" style="font-size:24px"></i>
             </a>
-            <p>Developed by: Wesley Figueiredo / 2022</p>
+            <p class="copyright">Developed by: Wesley Figueiredo </p>
         </div>
     </div>
 </body>
-
 </html> 
