--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container">
     <div class="col3 col5_md col16_sm" id="leftRow">
         <div id="profileImage">
-            <img id="dongarraImage" src="./perfil.jpg" />
+            <img id="dongarraImage" src="img/perfil.jpg" />
         </div>
         <div id="contactInfo">
             <h3>Contact Information</h3>
