Sistema de Cards/Estilização

--- a/index.html
+++ b/index.html
@@ -2,58 +2,107 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
     <title>Recuperação - Primeiro Trimestre: Edwin Catmull</title>
 </head>
 <body>
     <header>
 
     </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-3 col-lg-3 col-md-3">
-                <div class="row">
-                    <div class="col-12">
-                        <img alt="Imagem de Edwin Catmull" src="pic_01.jpg" />
+    <div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-3 col-lg-3 col-md-3 background-bio">
+                    <div class="row">
+                        <div class="col-12">
+                            <img alt="Imagem de Edwin Catmull" src="pic_01.jpg" class="rounded-4" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                  <h5 class="card-title">Dados pessoais</h5>
+                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quas? Amet deleniti hic laudantium exercitationem libero, ullam dolor aliquam facere sequi porro sapiente cupiditate pariatur accusamus qui. Veniam, porro distinctio?.</p>
+                                  <a href="#" class="card-link">Card link</a>
+                                  <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                  <h5 class="card-title">Pequeno texto sobre você</h5>
+                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quas? Amet deleniti hic laudantium exercitationem libero, ullam dolor aliquam facere sequi porro sapiente cupiditate pariatur accusamus qui. Veniam, porro distinctio?.</p>
+                                  <a href="#" class="card-link">Card link</a>
+                                  <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <p>Edwin Catmull (Parkersburg, 31 de março de 1945) é um cientista da computação gráfica estadunidense e presidente da Pixar e Walt Disney Animation Studios.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <p>Me chamo Gabriel e gosto de sorvete.</p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-xl-9 col-lg-9 col-md-9">
-                <div class="row">
-                    <div class="col-12">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dolor ipsam voluptates libero suscipit, consectetur consequuntur ad, cupiditate aliquam aliquid quam beatae facilis repellat deleniti veritatis quisquam sapiente voluptatum! Voluptatum delectus alias eveniet neque magni officiis numquam dignissimos, itaque nesciunt, voluptas nobis dicta ex sunt beatae in nisi tempora eaque placeat. Nobis laborum dolores possimus architecto, nihil dolor quasi, temporibus laudantium voluptate, soluta doloribus voluptates a delectus labore rerum ut veritatis at natus tempora reprehenderit error id exercitationem. Vitae sit incidunt dolorem corporis atque placeat est doloremque ut corrupti, ipsum a culpa modi facere aperiam necessitatibus temporibus repellendus excepturi nobis.
+                <div class="col-xl-9 col-lg-9 col-md-9">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                  <h5 class="card-title">Experiência & Projetos</h5>
+                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                  <a href="#" class="card-link">Card link</a>
+                                  <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </br>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card-body">
+                                  <h5 class="card-title">Educação</h5>
+                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                  <a href="#" class="card-link">Card link</a>
+                                  <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card-body">
+                                  <h5 class="card-title">Conhecimento Técnico</h5>
+                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                  <a href="#" class="card-link">Card link</a>
+                                  <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                </br>
-                <div class="row">
-                    <div class="col-6">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi praesentium recusandae necessitatibus aliquam pariatur beatae totam nesciunt, cumque nostrum minima ex ullam adipisci nam repellat fugiat porro itaque non dolorem inventore ab. Doloribus ab modi unde aliquam facere officia dicta sapiente, repellat voluptatem? Quo, quaerat nobis? Possimus, accusantium labore! Ipsam.
-                    </div>
-                    <div class="col-6">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur dolorum eligendi sunt blanditiis harum magnam excepturi accusantium iure saepe provident rerum voluptatibus, quidem in autem officiis omnis dolorem! Et id animi vero distinctio provident iure nemo quia ea laboriosam quasi aspernatur similique vel itaque repudiandae excepturi asperiores deleniti, nihil sapiente!
-                    </div>
-                </div>
-                </br>
-                <div class="row">
-                    <div class="col-12">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla dolor ipsam voluptates libero suscipit, consectetur consequuntur ad, cupiditate aliquam aliquid quam beatae facilis repellat deleniti veritatis quisquam sapiente voluptatum! Voluptatum delectus alias eveniet neque magni officiis numquam dignissimos, itaque nesciunt, voluptas nobis dicta ex sunt beatae in nisi tempora eaque placeat. Nobis laborum dolores possimus architecto, nihil dolor quasi, temporibus laudantium voluptate, soluta doloribus voluptates a delectus labore rerum ut veritatis at natus tempora reprehenderit error id exercitationem. Vitae sit incidunt dolorem corporis atque placeat est doloremque ut corrupti, ipsum a culpa modi facere aperiam necessitatibus temporibus repellendus excepturi nobis.
+                    </br>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                  <h5 class="card-title">Social Midia & About</h5>
+                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                  <a href="#" class="card-link">Card link</a>
+                                  <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
