Melhoria da responsividade e início do footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/f294d9b5b8.js" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet">
     <title>Recuperação - Primeiro Trimestre: Edwin Catmull</title>
 </head>
@@ -10,99 +11,147 @@
     <header>
 
     </header>
-    <div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xl-3 col-lg-3 col-md-3 background-bio">
-                    <div class="row">
-                        <div class="col-12">
-                            <img alt="Imagem de Edwin Catmull" src="pic_01.jpg" class="rounded-4" />
-                        </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-4 col-xl-3 background-bio">
+                <div class="row">
+                    <div class="col-12">
+                        <img alt="Imagem de Edwin Catmull" src="pic_01.jpg" class="rounded-4 img-fluid img-thumbnail" />
                     </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-body">
-                                  <h5 class="card-title">Dados pessoais</h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quas? Amet deleniti hic laudantium exercitationem libero, ullam dolor aliquam facere sequi porro sapiente cupiditate pariatur accusamus qui. Veniam, porro distinctio?.</p>
-                                  <a href="#" class="card-link">Card link</a>
-                                  <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-body">
-                                  <h5 class="card-title">Pequeno texto sobre você</h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quas? Amet deleniti hic laudantium exercitationem libero, ullam dolor aliquam facere sequi porro sapiente cupiditate pariatur accusamus qui. Veniam, porro distinctio?.</p>
-                                  <a href="#" class="card-link">Card link</a>
-                                  <a href="#" class="card-link">Another link</a>
-                                </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Dados pessoais</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quas? Amet deleniti hic laudantium exercitationem libero, ullam dolor aliquam facere sequi porro sapiente cupiditate pariatur accusamus qui. Veniam, porro distinctio?.</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xl-9 col-lg-9 col-md-9">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-body">
-                                  <h5 class="card-title">Experiência & Projetos</h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
-                                  <a href="#" class="card-link">Card link</a>
-                                  <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-                    </br>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="card">
-                                <div class="card-body">
-                                  <h5 class="card-title">Educação</h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
-                                  <a href="#" class="card-link">Card link</a>
-                                  <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="card">
-                                <div class="card-body">
-                                  <h5 class="card-title">Conhecimento Técnico</h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
-                                  <a href="#" class="card-link">Card link</a>
-                                  <a href="#" class="card-link">Another link</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </br>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card">
-                                <div class="card-body">
-                                  <h5 class="card-title">Social Midia & About</h5>
-                                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
-                                  <a href="#" class="card-link">Card link</a>
-                                  <a href="#" class="card-link">Another link</a>
-                                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Pequeno texto sobre você</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quas? Amet deleniti hic laudantium exercitationem libero, ullam dolor aliquam facere sequi porro sapiente cupiditate pariatur accusamus qui. Veniam, porro distinctio?.</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="col-sm-12 col-md-8 col-xl-9">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Experiência & Projetos</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                <div class="row">
+                    <div class="col-6 d-none d-lg-block">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Educação</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 d-none d-lg-block" id="cardright">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Conhecimento Técnico</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-block d-lg-none">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Educação</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-block d-lg-none">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Conhecimento Técnico</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row d-none d-lg-block">
+                    <div class="col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Prêmios</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                                <a href="#" class="card-link">Card link</a>
+                                <a href="#" class="card-link">Another link</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row d-block d-lg-none">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Prêmios</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque in, ad cum aliquid aspernatur velit. Voluptatibus dignissimos beatae facilis tempore doloremque dolores corporis incidunt. Commodi quia ipsum dolorem dicta ipsa nobis excepturi consequatur quisquam totam cupiditate reprehenderit debitis laudantium voluptas eligendi perferendis, dolores, minima consequuntur blanditiis minus repellendus id?</p>
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </div>
-</div>
+    <footer>
+        <div class="container-fluid d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <ul class="navbar-expand nav justify-content-start list-unstyled d-flex">
+                <li class="ms-3"><a class="text-muted" href="https://twitter.com/edcatmull"><i class="fa-brands fa-twitter-square"></i></a></li>
+                <li class="ms-3"><a class="text-muted" href="https://en.wikipedia.org/wiki/Edwin_Catmull"><i class="fa-brands fa-wikipedia-w"></i></a></li>
+            </ul>
+            <div class="d-flex align-items-end me-3">
+                <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"></a>
+                <span class="text-muted">© 2021 Company, Inc</span>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
