--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                                     Nascimento: 31/03/1945 <br>
                                     Cidade natal: <a href="https://en.wikipedia.org/wiki/Parkersburg,_West_Virginia">Parkersburg, West Virginia</a> <br>
                                     Esposa: Susan Anderson Catmull <br>
+                                    E-mail para contato: <span id="email">edwin@pixar.com</span>
                                 </p>
                                 <a href="#" class="card-link">Card link</a>
                                 <a href="#" class="card-link">Another link</a>
@@ -61,7 +62,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Formação & Experiência</h5>
                                 <h6 class="card-subtitle mb-2">Formação</h6>
-                                <p>
+                                <p class="card-text">
                                     1974: Doutorado em Ciência da Computação
                                     xxxx: Bachalerado em Ciência da Computação
                                     xxxx: Bachalerado em Física
@@ -83,6 +84,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
                 <div class="row">
                     <div class="col-12 d-none d-lg-block">
                         <div class="card">
@@ -92,7 +94,7 @@
                                 <table class="table table-borderless table-striped">
                                     <thead>
                                       <tr>
-                                        <th scope="col"></th>
+                                        <th scope="col">Nº</th>
                                         <th scope="col">Nome</th>
                                         <th scope="col">Partipação</th>
                                         <th scope="col">Ano</th>
@@ -365,14 +367,14 @@
                                       </tr>
 
                                     </tbody>
-                                  </table>
+                                </table>
                             </div>
                         </div>
                     </div>
                     
                 <div class="row d-none d-lg-block">
                     <div class="col-12">
-                        <div class="card">
+                        <div class="card" id="premios">
                             <div class="card-body">
                                 <h5 class="card-title">Prêmios</h5>
                                 <h6 class="card-subtitle mb-2">Card subtitle</h6>
@@ -400,6 +402,299 @@
                 </div>
             </div>
         </div>
+        <div class="row d-block d-lg-none">
+            <div class="col-12">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          Projetos
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <table class="table table-borderless table-striped">
+                                <thead>
+                                  <tr>
+                                    <th scope="col">Nº</th>
+                                    <th scope="col">Nome</th>
+                                    <th scope="col">Partipação</th>
+                                    <th scope="col">Ano</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th scope="row">1</th>
+                                    <td>Futureworld</td>
+                                    <td>Producer: Animated Face and Animated Hand Film</td>
+                                    <td>1976</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">2</th>
+                                    <td>Star Trek II: The Wrath of Khan</td>
+                                    <td>Computer Graphics: Industrial Light & Magic</td>
+                                    <td>1982</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">3</th>
+                                    <td>Toy Story</td>
+                                    <td>Executive Producer, Renderman(R) Software Development</td>
+                                    <td>1995</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">4</th>
+                                    <td>A Bug's Life</td>
+                                    <td>Executive Team - uncredited</td>
+                                    <td>1998</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">5</th>
+                                    <td>Toy Story 2</td>
+                                    <td>Executive Team - uncredited</td>
+                                    <td>1999</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">6</th>
+                                    <td>Monsters, Inc.</td>
+                                    <td>Executive Team - uncredited</td>
+                                    <td>2001</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">7</th>
+                                    <td>Finding Nemo</td>
+                                    <td>Executive Team - uncredited</td>
+                                    <td>2003</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">8</th>
+                                    <td>The Incredibles</td>
+                                    <td>Executive Team - uncredited</td>
+                                    <td>2004</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">8</th>
+                                    <td>Cars</td>
+                                    <td>Executive team</td>
+                                    <td>2006</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">9</th>
+                                    <td>Meet the Robinsons</td>
+                                    <td>Executive team</td>
+                                    <td>2007</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">10</th>
+                                    <td>Ratatouille</td>
+                                    <td>Executive team</td>
+                                    <td>2008</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">11</th>
+                                    <td>WALL-E</td>
+                                    <td>Pixar Senior Staff</td>
+                                    <td>2008</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">12</th>
+                                    <td>Tinker Bell</td>
+                                    <td>Executive Team: Pixar and Walt Disney Animation Studios</td>
+                                    <td>2008</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">13</th>
+                                    <td>Bolt</td>
+                                    <td>Executive Team</td>
+                                    <td>2008</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">14</th>
+                                    <td>Up</td>
+                                    <td>Pixar Senior Staff</td>
+                                    <td>2009</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">15</th>
+                                    <td>Tinker Bell and the Lost Treasure</td>
+                                    <td>Executive Team: Pixar and Walt Disney Animation Studios</td>
+                                    <td>2009</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">16</th>
+                                    <td>The Princess and the Frog</td>
+                                    <td>Disney Senior Staff</td>
+                                    <td>2009</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">17</th>
+                                    <td>Toy Story 3</td>
+                                    <td>Pixar Executive Team</td>
+                                    <td>2010</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">18</th>
+                                    <td>Tinker Bell and the Great Fairy Rescue</td>
+                                    <td>Executive Team: Pixar and Walt Disney Animation Studios</td>
+                                    <td>2010</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">19</th>
+                                    <td>Tangled</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2010</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">20</th>
+                                    <td>Cars 2</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2011</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">21</th>
+                                    <td>Winnie the Pooh</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2011</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">22</th>
+                                    <td>Brave</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2012</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">23</th>
+                                    <td>Secret of the Wings</td>
+                                    <td>Executive Team: Pixar and Walt Disney Animation Studios</td>
+                                    <td>2012</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">24</th>
+                                    <td>Wreck-It Ralph</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2012</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">25</th>
+                                    <td>Monsters University</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2013</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">26</th>
+                                    <td>Planes</td>
+                                    <td>Studio Leadership: Walt Disney Animation Studios</td>
+                                    <td>2013</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">27</th>
+                                    <td>Frozen</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2013</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">28</th>
+                                    <td>The Pirate Fairy</td>
+                                    <td>Studio Leadership: Walt Disney Animation Studios</td>
+                                    <td>2014</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">29</th>
+                                    <td>Planes: Fire & Rescue</td>
+                                    <td>Studio Leadership: Walt Disney Animation Studios</td>
+                                    <td>2014</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">30</th>
+                                    <td>Big Hero 6</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2014</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">31</th>
+                                    <td>Tinker Bell and the Legend of the NeverBeast</td>
+                                    <td>Studio Leadership: Walt Disney Animation Studios</td>
+                                    <td>2014</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">32</th>
+                                    <td>Inside Out</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2015</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">33</th>
+                                    <td>The Good Dinosaur</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2015</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">34</th>
+                                    <td>Zootopia</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2016</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">35</th>
+                                    <td>Finding Dory</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2016</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">36</th>
+                                    <td>Moana</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2016</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">37</th>
+                                    <td>Cars 3</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2017</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">38</th>
+                                    <td>Coco</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2017</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">39</th>
+                                    <td>Incredibles 2</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2018</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">40</th>
+                                    <td>Ralph Breaks the Internet</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2018</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">41</th>
+                                    <td>Toy Story 4</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2019</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">42</th>
+                                    <td>Frozen II</td>
+                                    <td>Studio Leadership</td>
+                                    <td>2019</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">43</th>
+                                    <td>Onward</td>
+                                    <td>Pixar Senior Leadership Team</td>
+                                    <td>2020</td>
+                                  </tr>
+
+                                </tbody>
+                            </table>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
         </div>
     </div>
     <footer>
@@ -409,7 +704,6 @@
                 <li class="ms-3"><a class=" href="https://en.wikipedia.org/wiki/Edwin_Catmull"><i class="fa-brands fa-wikipedia-w"></i></a></li>
             </ul>
             <div class="d-flex align-items-end me-3">
-                <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1"></a>
                 <span class="text-muted">© 2021 Company, Inc</span>
             </div>
         </div>
