--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="./perfil.jpg">   
 </head>
 <body class="container">
-    <div class="col3 col5_md col16_sm" id="leftRow">
+    <div class="col3 col5_md col16_sm" id="resume">
         <div id="profileImage">
             <img id="dongarraImage" src="img/perfil.jpg" />
         </div>
@@ -20,7 +20,7 @@
                 <li>dongarra@icl.utk.edu</li>
             </ul>
         </div>
-        <div id="profileInfo">
+        <div id="resumeText">
             <h3>About Me</h3>
             <p>Jack Joseph Dongarra is the American University Distinguished Professor of Computer Science in the Electrical Engineering and Computer Science Department at the University of Tennessee. He holds the position of a Distinguished Research Staff member in the Computer Science and Mathematics Division at Oak Ridge National Laboratory, Turing Fellowship in the School of Mathematics at the University of Manchester.</p>
             <h4> See more:</h4>
@@ -45,11 +45,11 @@
         </div>
         <div class="col8 col16_md col16_sm" id="education">
             <h3>Alma Mater</h3>
-            <p class="course">Chicago State University (BSc) - 1972</p>
+            <p class="institute">Chicago State University (BSc) - 1972</p>
             <p>Bachelor of Science degree in Mathematics</p>
-            <p class="course">Illinois Institute of Technology (MSc) - 1973</p>
+            <p class="institute">Illinois Institute of Technology (MSc) - 1973</p>
             <p>Master of Science in Computer Science</p>
-            <p class="course">University of New Mexico (PhD) - 1980</p>
+            <p class="institute">University of New Mexico (PhD) - 1980</p>
             <p>Doctor of Philosophy in Applied Mathematics</p>
         </div>
         <div class="col8 col16_md col16_sm" id="awards">
