--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="https://www.linkedin.com/in/jack-dongarra-028544" target="_blank">
                 <i class="fa fa-linkedin" style="font-size:24px"></i>
             </a>
-            <p class="copyright">Developed by: Wesley Figueiredo </p>
+            <p class="copyright">Developed by: Wesley Figueiredo & Guilheme Diniz </p>
         </div>
     </div>
 </body>
