--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Recuperação - Primeiro Trimestre: Edwin Catmull</title>
 </head>
 <body>
-    <header>
+  <header>
 
-    </header>
+  </header>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-4 col-xl-3 background-bio">
@@ -45,7 +45,11 @@
                                 </p>
                                 <h5 class="card-subtitle mb-2">→ Resumo</h5>
                                 <p class="card-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quas? Amet deleniti hic laudantium exercitationem libero, ullam dolor aliquam facere sequi porro sapiente cupiditate pariatur accusamus qui. Veniam, porro distinctio?.</p>
+                                  ⠀  Edwin  Catmull nasceu no ano de 1945 em Parkersburg, West Virginia ainda durante a 2ª Guerra Mundial. Em 1976 Catmull ingressou em uma jornada almejando alcançar o bacharelato tando em Física como Ciência da Computação, quatro anos após a ingressão na faculdade de Utha Catmull recebeu seus dois bacharelados. No mesmo ano ele ingressou novamente em Utah para conseguir seu doutorado em Ciência da Computação conseguindo seu Ph.D em 1974. Em 1977 como diretor do Laboratório de Computação Gráfica do NYTI criou o “Tween"software capaz de criar uma animação 2D entre dois quadros.
+                                  </p>
+                                  <p class="card-text">
+                                  ⠀  Durante 1979 a 1886 Edwin liderou uma equipe que teve como objetivo trazer a computação gráfica para o meio do entretenimento. Em 1986 com a compra da divisão digital da Lucasfilme pelo Steve Jobs, Catmull passou a trabalhar para Pixar onde atua até os dias atuais apesar de apresentar planos de aposentadoria da Disney Animation e Pixar.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -433,7 +437,6 @@
                     <h5 class="card-subtitle mb-2">→ Card subtitle</h5>
                     <div class="row">
                       <div class="col-6">
-                        <div class="card-group">
                           <div class="card subcard">
                             <div class="card-body">
                               <h4 class="card-title">Oscar (Prêmios da Academia)</h4>
@@ -450,7 +453,6 @@
                               <p class="card-text">O livro de Edwin Catmull, "Criatividade S.A.: Superando as forças invisíveis que ficam No caminho da verdadeira inspiração", foi um dos indicados a premiação anual da Financial Times no ano de 2014 pela categoria de livros de negócios.</p>
                             </div>
                           </div>
-                        </div>
                       </div>
                       <div class="col-6">
                         <div class="card-group">
@@ -759,7 +761,6 @@
                                     <td>Pixar Senior Leadership Team</td>
                                     <td>2020</td>
                                   </tr>
-
                                 </tbody>
                             </table>
                         </div>
@@ -772,14 +773,13 @@
     </div>
     <div class="container-fluid">
       <footer>
-                
-              <a href="https://twitter.com/edcatmull"><i class="fa-brands fa-twitter-square"></i></a>
-              <a href="https://en.wikipedia.org/wiki/Edwin_Catmull"><i class="fa-brands fa-wikipedia-w"></i></a>
-              <div class="d-flex align-items-end me-3">
-                  <a class="ms-3" href=""><i class="fa-brands fa-github-square"><span>Gabriel Rodrigues</span></i></a>
-                  <a class="ms-3" href=""><i class="fa-brands fa-github-square"><span>Bernardo Tavares</span></i></a>
-                  <span class="ms-3">© 2021 Bandex Enterprises</span>
-              </div>
+        <a href="https://twitter.com/edcatmull"><i class="fa-brands fa-twitter-square"></i></a>
+        <a href="https://en.wikipedia.org/wiki/Edwin_Catmull"><i class="fa-brands fa-wikipedia-w"></i></a>
+        <div class="d-flex align-items-end me-3">
+          <a class="ms-3" href=""><i class="fa-brands fa-github-square"><span>Gabriel Rodrigues</span></i></a>
+          <a class="ms-3" href=""><i class="fa-brands fa-github-square"><span>Bernardo Tavares</span></i></a>
+          <span class="ms-3">© 2021 Bandex Enterprises</span>
+        </div>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
